[project]
name = "mazegen"
version = "1.0.0"
description = "A flexible and configurable maze generation library for Python."
authors = [
    {name = "akouiss, yjabrane"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy (>=1.20.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
